Fixed bug where global style for route fade animations was causing pages to cut-off on iPhone

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,12 +10,12 @@ body {
   font-size: 16px;
 }
 
-// For route fade animation
-router-outlet ~ * {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-}
+// // For route fade animation
+// router-outlet ~ * {
+//   position: absolute;
+//   height: 100%;
+//   width: 100%;
+// }
 
 @import '~@angular/material/theming';
 // @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
